add totalrun, time, step table
