# applications/runs/controllers/runCardController.js
@@ -8,7 +8,8 @@ runCardController.read = function (req, res) {
     let offset = pageNum > 1 ? 10 * (pageNum - 1) : 0;
   
     knex("run")
-      .select("runId", "runName", "state") // time, prjectname
+      .select("run.runId", "run.runName", "run.state", "run.updated_at", "project.projectName") // db 수정 후 run.updatedAt 변경
+      .join("project", "run.projectId", "project.projectId")
       .limit(10).offset(offset)  
       .then((projectList) => {
         res.json(projectList);
